--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.android.support:design:23.1.1'
 }
