--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="teamkevinlove.com.wififinder">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -20,13 +23,17 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="NetworkInformation"
-                  android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="teamkevinlove.com.wififinder.NetworkInformation" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </activity>
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/title_activity_main2">
 
+        <intent-filter>
+            <action android:name="teamkevinlove.com.wififinder.Main2Activity" />
+
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+
+        </activity>
     </application>
+
 </manifest>
